# bingokta

./: Cargo.toml  Dockerfile  Makefile.toml
.github/workflows/: rust-ci.yml
src/application/: service.rs
src/application/ports/: input_port.rs  output_port.rs
src/infrastructure/web/: routes.rs
